# fugio-portaudio

./: CMakeLists.txt  README.md  fugio-manifest.json.in
api/: CMakeLists.txt
fugio-portaudio/: CMakeLists.txt
fugio-portaudio/translations/: translations.qrc  translations_de.ts
